--- a/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
+++ b/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
@@ -47,7 +47,10 @@ mixin s-portfolio()
 								.ttl-bord
 									+e.DIV.title  Продающий сайт   для  
 										| 
-										span.thm.d-inline-block квест-комнаты “Лабиринт”
+										span.thm.d-inline-block квест-комнаты 
+										|
+										br
+										| “Лабиринт”
 								button.btt.btt-blue(type="button")
 									span Нажмите для просмотра проекта
 						.cl-7
@@ -58,7 +61,9 @@ mixin s-portfolio()
 										.ttl-bord
 											+e.DIV.title  Продающий сайт   для  
 												| 
-												span.thm.d-inline-block it&nbsp;компании  General Marketing
+												span.thm.d-inline-block it&nbsp;компании  
+												|
+												| General Marketing
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
 								+b.cl.cl-5.itm.ht6.img-bg(href="#")
@@ -68,9 +73,9 @@ mixin s-portfolio()
 											+e.DIV.title Листовка   для 
 												|
 												| 
-												span.thm.d-inline-block сети  кальянных компании
+												span.thm.d-inline-block сети  кальянных 
 												|
-												| “Cheshire”
+												| компании “Cheshire”
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
 						 
@@ -81,7 +86,9 @@ mixin s-portfolio()
 											+e.DIV.title  Продающий сайт   для  
 												| 
 												| 
-												span.thm.d-inline-block it&nbsp;компании  General Marketing
+												span.thm.d-inline-block it&nbsp;компании  
+												|
+												| General Marketing
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
 								+b.cl.cl-5.itm.ht5.img-bg(href="#")
@@ -89,9 +96,9 @@ mixin s-portfolio()
 									.itm__more
 										.ttl-bord
 											+e.DIV.title  Листовка   для 
-												span.thm.d-inline-block сети  кальянных компании
+												span.thm.d-inline-block сети  кальянных 
 												| 
-												| “Cheshire”
+												| компании “Cheshire”
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
 						.cl-5.cl-5-right
