--- a/sourse/pug/blocks/s-team/_s-team.scss
+++ b/sourse/pug/blocks/s-team/_s-team.scss
@@ -1,27 +1,288 @@
 .s-team {
-		 
-	@include media-breakpoint-up(xl) {}
+
+	.section-title {
+		// margin-left: auto;
+		// margin-right: auto;
+		// max-width: 1000px;
+	}
+
+	&__slide {
+		&:not(.swiper-slide-active) {
+			opacity: 0 !important;
+		}
+	}
+
+	&__slide-sm {
+		// width: 55px;
+		width: auto;
+
+		&:not(.swiper-slide-thumb-active) {
+			opacity: 0.4;
+		}
+	}
+
+	&__img-wrap-sm {
+		background-color: #ffffff;
+		border-radius: 50%;
+		@include media-breakpoint-up(sm) {
+
+			height: 55px;
+			width: 55px;
+		}
+		width: 48px;
+		height: 48px;
+		position: relative;
+		overflow: hidden;
+		cursor: pointer;
+
+		img {
+			max-width: 120%;
+			height: auto;
+			@include a-cent(x);
+		}
+
+	}
+
+	.gallery-thumbs {
+		// margin-left: auto;
+		// margin-right: 0;
+		margin-left: 0;
+		max-width: 400px;
+
+	}
+
+	&__swiper-wrapper {
+		z-index: 20;
+		position: relative;
+
+		@include media-breakpoint-down(md) {
+
+			max-width: 405px;
+			margin-left: auto;
+			margin-right: auto;
+		}
+		@include media-breakpoint-down(xs) {
+			
+			max-width: 285px;
+		}
+		// margin-left: auto;
+		// margin-right: 0;
+		.swiper-scrollbar {
+			height: 10px;
+		}
+	}
+
+	&__proff {
+		margin-left: auto;
+		@extend .h6;
+		color: #ffffff;
+		font-weight: bold;
+		background-color: $primary;
+		@include media-breakpoint-up(xl) {
+			
+			padding: em(5) em(15);
+			border-radius: 20px 0;
+		}
+		border-radius: 30px 0;
+		padding: em(15) em(15);
+		max-width: 280px;
+		margin-right: auto;
+
+		@include media-breakpoint-up(xl) {
+			display: inline-block;
+			max-width: none;
+		}
+
+		text-align: center;
+
+	}
+
+	.gallery-top {
+		@include media-breakpoint-up(xxl) {}
+
+		// margin-top: -200px;
+		@include media-breakpoint-up(xl) {
+
+			margin-top: -130px;
+		}
+
+		@include media-breakpoint-up(lg) {
+
+			margin-top: -100px;
+		}
+	}
+
+	&__caption {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		height: 100%;
+
+		@include media-breakpoint-up(xxl) {
+
+			padding-top: 160px;
+			padding-bottom: 100px;
+		}
+
+		@include media-breakpoint-up(xl) {
+			padding-top: 120px;
+			// padding-bottom: rem(20px);
+		}
+
+		padding-bottom: rem(35px);
+
+		@include media-breakpoint-down(md) {
+
+			max-width: 405px;
+			margin-left: auto;
+			margin-right: auto;
+			text-align: center;
+		}
+	}
+
+	@include media-breakpoint-up(lg) {
+
+		// padding-bottom: rem(25px);
+
+		.section-title {
+			@include media-breakpoint-up(xxl) {
+
+				margin-bottom: 80px;
+			}
+			margin-bottom: 54px;
+		}
+	}
+
+	&__title {
+		@extend h4;
+		font-family: "PF Agora Slab Pro - Ultra Black";
+		margin-bottom: 1em;
+	}
+
+	p {
+		color: $secondary;
+	}
+
+	@include media-breakpoint-up(xl) {
+		.container {
+			max-width: 1170px;
+		}
+	}
+
+	&__btn {
+		max-width: rem(324px);
+
+		@include media-breakpoint-down(md) {
+			margin-left: auto;
+			margin-right: auto;
+		}
+	}
+
+	.fp-tableCell {
+		.container {
+
+			min-height: 100vh;
+
+			@include media-breakpoint-up(xl) {
+
+				padding-top: rem(40px);
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+			}
+
+			padding-top: rem(80px);
+		}
+	}
+
+	&__img-wrap {
+		@include media-breakpoint-up(xxl) {}
+
+		@include media-breakpoint-up(xl) {
+			text-align: left;
+			margin-right: -54px;
+			margin-top: 0;
+		}
+
+		margin-top: rem(48);
+		text-align: center;
+
+		// margin-right: -34px;
+		img {
+			@include media-breakpoint-up(xxl) {
+
+				max-height: 620px;
+			}
+
+			@include media-breakpoint-up(xl) {
+
+				max-height: 500px;
+			}
+
+			max-height: 380px;
+
+		}
+
+		// margin-left: -60px;
+	}
+
+	.swiper-container {
+		max-width: 100%;
+	}
+
+	.swiper-wrapper {
+		@include media-breakpoint-up(xxl) {
+
+			align-items: flex-end;
+		}
+	}
+
+	.swiper-scrollbar{
+		height: 2px;
+		background-color: #e5e5e5;
+		margin-top: 10px;
+		&-drag{
+			height: 4px;
+			border-radius: 2px;
+			background-color: #ff7e07;
+			// margin-top: -2px;
+			top: -1px;
+			cursor: pointer;
+		}
+	}
+
 	@include media-breakpoint-up(lg) {}
+
 	@include media-breakpoint-up(md) {}
+
 	@include media-breakpoint-up(sm) {}
+
 	@include media-breakpoint-up(xs) {}
-	
+
 	//
-	@include media-breakpoint-between(md, xl) { }
-	
-	
+	@include media-breakpoint-between(md, xl) {}
+
+
 	//
 	@include media-breakpoint-only(xs) {}
+
 	@include media-breakpoint-only(sm) {}
+
 	@include media-breakpoint-only(md) {}
+
 	@include media-breakpoint-only(lg) {}
+
 	@include media-breakpoint-only(xl) {}
-	
+
 	//
 	@include media-breakpoint-down(xl) {}
+
 	@include media-breakpoint-down(lg) {}
+
 	@include media-breakpoint-down(md) {}
+
 	@include media-breakpoint-down(sm) {}
-	@include media-breakpoint-down(xs) {} 
+
+	@include media-breakpoint-down(xs) {}
 
 }
