--- a/sourse/pug/pages/layout/main.pug
+++ b/sourse/pug/pages/layout/main.pug
@@ -41,6 +41,8 @@ html(lang="ru")
 		link(rel="stylesheet", href="libs/fullPage.js/fullpage.min.css")
 		link(rel="stylesheet", href="css/main.min.css")
 	body
+		// PRLD
+		//- #prld.prld
 		.main-wrapper
 			block pagecontent
 				h3 content
