--- a/sourse/pug/blocks/s-about/_s-about.scss
+++ b/sourse/pug/blocks/s-about/_s-about.scss
@@ -1,5 +1,73 @@
 .s-about {
-		 
+		.container{
+			@include media-breakpoint-up(xxl) {
+
+				max-width: 1360px;
+				padding-left: 30px;
+				padding-right: 30px;
+			}
+			@include media-breakpoint-up(lg) {
+
+				padding-top: 80px;
+				padding-bottom: 80px;
+			}
+			padding-top: 100px;
+			}
+		 p{
+			color: $secondary; 
+			max-width: 951px;
+		 }
+		 &__aside-text{
+			color: $secondary;
+			padding-top: em(20);
+			 &::before{
+				 content: '“';
+				 font-size: rem(51px);
+				font-weight: 700;
+				line-height: .5;
+				vertical-align: bottom;
+			 }
+		 }
+		 &__img-wrap{
+
+		 }
+		 &__row-foot{
+			@include media-breakpoint-up(sm) {
+
+			}
+			justify-content: space-around;
+			// justify-content: space-between;
+		 }
+		 &__col{
+			 @extend .h6;
+			 font-weight: bold;
+			 text-align: center;
+			 max-width: 260px;
+			 width: 260px;
+			 text-transform: uppercase;
+			 @include media-breakpoint-up(xxl) {
+
+				 padding-bottom: 60px;
+				}
+				padding-bottom: 30px;
+
+		 }
+		 &__icon-wrap{
+			 margin-bottom: 0.5rem;
+		 }
+		 &__text-block{
+			 padding-bottom: 30px;
+			 @include media-breakpoint-up(xxl) {
+				 padding-bottom: 80px;
+			 }
+		 }
+		 &__btn{
+			 margin-left: auto;
+			 margin-right: auto;
+			 max-width: 324px;
+			 width: 100%;
+			 display: flex;
+		 }
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
@@ -21,7 +89,22 @@
 	@include media-breakpoint-down(xl) {}
 	@include media-breakpoint-down(lg) {}
 	@include media-breakpoint-down(md) {}
-	@include media-breakpoint-down(sm) {}
+	@include media-breakpoint-down(sm) {
+		h2,
+		&__text-block--aside{
+			text-align: center;
+		}
+		&__icon-wrap{
+			width: 140px;
+			margin-left: auto;
+			margin-right: auto;
+			height: 140px;
+			img{
+				width: 100%;
+				height: 100%;
+			}
+		}
+	}
 	@include media-breakpoint-down(xs) {} 
 
 }
