--- a/sourse/pug/blocks/s-logos/_s-logos.pug
+++ b/sourse/pug/blocks/s-logos/_s-logos.pug
@@ -3,7 +3,17 @@ mixin s-logos()
 	+b.SECTION.s-logos.section#s-logos&attributes(attributes)
 		.container
 			+b.section-title.text-center
-				h2 s-logos
-				
+				h2 Наши клиенты
+			.prm__pxs.pxs
+				.px.px-4(id=`px4`)
+					img(src="#" data-src='img/list-logo-1.png', alt='', data-depth='1')
+				.px.px-5(id=`px5`)
+					img(src="#" data-src='img/list-logo-2.png', alt='', data-depth='0.75')
+				.px.px-6(id=`px6`)
+					img(src="#" data-src='img/list-logo-3.png', alt='', data-depth='0.5')
 			.row
+				- for (var x = 1; x < 13; x++)
+					+e.col.col-lg-3.col-md-4.col-6
+						img.res-i(src="#" data-src=`img/logo-${x}.png`)
+					// /+e.col.col-lg-3.col-md-4.col-6
 	// end s-logos
