add all windows

--- a/sourse/pug/pages/layout/main.pug
+++ b/sourse/pug/pages/layout/main.pug
@@ -42,7 +42,7 @@ html(lang="ru")
 		link(rel="stylesheet", href="css/main.min.css")
 	body
 		// PRLD
-		//- #prld.prld
+		#prld.prld
 		.main-wrapper
 			block pagecontent
 				h3 content
